--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Reader with Pagination</title>
     <style>
-        /* General Styles */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f2f5;
@@ -18,68 +17,53 @@
         }
         .container {
             background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             max-width: 700px;
             width: 100%;
         }
         h1 {
             text-align: center;
             color: #333;
+            margin-bottom: 15px;
+        }
+        form {
             margin-bottom: 20px;
         }
-
-        /* Form Styles */
-        form {
-            margin-bottom: 30px;
-        }
         label {
-            font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             display: block;
-            color: #555;
         }
         input[type="text"] {
             width: 100%;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            font-size: 16px;
-            box-sizing: border-box;
-            transition: all 0.3s ease;
-        }
-        input[type="text"]:focus {
-            outline: none;
-            border-color: #007bff;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
         }
         button {
             width: 100%;
-            padding: 15px;
+            padding: 10px;
             background-color: #007bff;
             color: white;
-            font-size: 16px;
             border: none;
-            border-radius: 5px;
+            border-radius: 3px;
             cursor: pointer;
-            transition: all 0.3s ease;
         }
         button:hover {
             background-color: #0056b3;
         }
-
-        /* Table Styles */
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 10px;
             display: none; /* Hide initially */
         }
         th, td {
+            padding: 10px;
+            border: 1px solid #ccc;
             text-align: left;
-            padding: 15px;
-            border-bottom: 1px solid #ddd;
         }
         th {
             background-color: #007bff;
@@ -88,40 +72,25 @@
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
-        td {
-            font-size: 14px;
-            color: #555;
-        }
-
-        /* Pagination Styles */
         .pagination {
             display: flex;
             justify-content: center;
-            margin-top: 20px;
+            margin-top: 10px;
         }
         .pagination button {
             background-color: #007bff;
             color: white;
             border: none;
-            padding: 10px 15px;
+            padding: 5px 10px;
             margin: 0 5px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: all 0.3s ease;
+            border-radius: 3px;
         }
         .pagination button:hover {
             background-color: #0056b3;
         }
-        .pagination button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-
-        /* Error Message */
         .error {
             color: red;
             font-weight: bold;
-            margin-top: 10px;
             text-align: center;
         }
     </style>
@@ -146,7 +115,6 @@
             <tbody id="tableBody"></tbody>
         </table>
 
-        <!-- Pagination Controls -->
         <div class="pagination" id="pagination" style="display: none;">
             <button id="prevPage" disabled>Previous</button>
             <button id="nextPage" disabled>Next</button>
